# kafka-reader

./: Cargo.toml
kafka/: README.md  docker-compose.yml
scripts/: run-profile-add.ps1  run-read.ps1
src/: arguments.rs  configuration.rs  main.rs  profile.rs  reader.rs
src/arguments/: profile.rs  read.rs
