[package]
name = "kafka-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
config = "0.15.11"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
prettytable-rs = "0.10.0"
kafka = "0.10.0"
openssl = { version = '0.10.73', features = ["vendored"] }
base64 = "0.21.7"
serde_json = "1.0.140"

[build-dependencies]
openssl = { version = '0.10.73', features = ["vendored"] }
